@@ -24,6 +24,12 @@ volume_size = 25
 # temporal directory (default: /tmp)
 temp_dir=/tmp
 
+# archive directory (default: /var/lib/zentyal/.cache/duplicity)
+# if you change this after the first run duplicity will have to recreate
+# it again from the repository. The old one will not be automatically deleted.
+archive_dir = /var/lib/zentyal/.cache/duplicity
+
+
 # Retrying configuration
 # This set of values are set when the uploading is done and some
 # retries are required to complete the backup
