@@ -1,4 +1,5 @@
 2.0.11
+	+ Duplicity archive dir can be set in configuration file
 	+ Report methods in RemoteSettings and BackupDomains now return
 	  non-i18n'ed data
 	+ Parse and store backup statistics for further processing
